--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: islandclimbing
 Title: Shiny App To Accompany Guernsey Trad Book
 Version: 0.0.0.9000
 Authors@R: 
-    c(person("Ryan", "Hardiman", , "first.last@example.com", role = c("aut", "cre")),
+    c(person("Ryan", "Hardiman", , "r.j.hardiman@outlook.com", role = c("aut", "cre")),
       person("Michael", "Jones", role = c("aut")))
 Description: This package provides a shiny app to accompoany the book, Guernsey Trad, by James Burton
 License: pending
@@ -12,3 +12,5 @@ RoxygenNote: 7.2.0
 Depends: 
     R (>= 2.10)
 LazyData: true
+Imports: 
+    tidyverse
