--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: islandclimbing
 Title: Shiny App To Accompany Guernsey Trad Book
-Version: 0.0.0.9000
+Version: 0.0.1.0000
 Authors@R: 
     c(person("Ryan", "Hardiman", , "r.j.hardiman@outlook.com", role = c("aut", "cre")),
       person("Michael", "Jones", role = c("aut")))
@@ -13,4 +13,20 @@ Depends:
     R (>= 2.10)
 LazyData: true
 Imports: 
-    tidyverse
+    tidyverse,
+    dplyr,
+    htmltools,
+    leaflet,
+    lubridate,
+    minpack.lm,
+    shiny,
+    shinyTime,
+    tibble,
+    viridis,
+    ggplot2,
+    htmlwidgets,
+    purrr,
+    rlang,
+    rvest,
+    stringr
+    
